--- a/EUCDC.ipynb
+++ b/EUCDC.ipynb
@@ -995,7 +995,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd682f28950>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724e32710>"
       ]
      },
      "execution_count": 7,
@@ -1034,7 +1034,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd68315eb50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1725c8e910>"
       ]
      },
      "execution_count": 8,
@@ -1075,7 +1075,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd682a684d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1728044310>"
       ]
      },
      "execution_count": 9,
@@ -1122,7 +1122,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd682b22ed0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724c815d0>"
       ]
      },
      "execution_count": 10,
@@ -1173,7 +1173,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd682b68bd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724c11e10>"
       ]
      },
      "execution_count": 11,
@@ -1219,7 +1219,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd68035d590>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17223f5990>"
       ]
      },
      "execution_count": 12,
@@ -1247,7 +1247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this factor (relative increase in cases since yesterday) we can calculate the number of days to double by some logarithmic magic. For NL and ES the number doubled every one or two days in the beginning but now it doubles in about a week."
+    "From this factor (relative increase in cases since yesterday) we can calculate the number of days to double by some logarithmic magic. For NL the number doubled every one or two days in the beginning but now it doubles in over ten days, which is a good sign."
    ]
   },
   {
@@ -1258,7 +1258,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd6802448d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17222e38d0>"
       ]
      },
      "execution_count": 13,
@@ -1291,16 +1291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd6802225d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724f3d690>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1338,7 +1338,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd680123750>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17221438d0>"
       ]
      },
      "execution_count": 15,
@@ -1379,7 +1379,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd68004e090>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17220ef390>"
       ]
      },
      "execution_count": 16,
@@ -1430,18 +1430,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.5"
   }
  },
  "nbformat": 4,
