--- a/EUCDC.ipynb
+++ b/EUCDC.ipynb
@@ -9,24 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove 'COVID-19-geographic-disbtribution-worldwide.xlsx': No such file or directory\n",
-      "--2020-04-05 13:56:52--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.33.18.175, 13.33.18.196, 13.33.18.68, ...\n",
-      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.33.18.175|:443... connected.\n",
+      "--2020-04-06 09:35:21--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.198.44, 13.227.198.83, 13.227.198.98, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.198.44|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 387711 (379K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
       "Saving to: ‘COVID-19-geographic-disbtribution-worldwide.xlsx’\n",
       "\n",
-      "COVID-19-geographic 100%[===================>] 378.62K  2.43MB/s    in 0.2s    \n",
+      "COVID-19-geographic 100%[===================>] 378.62K  --.-KB/s    in 0.09s   \n",
       "\n",
-      "2020-04-05 13:56:53 (2.43 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [387711/387711]\n",
+      "2020-04-06 09:35:21 (4.17 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [387711/387711]\n",
       "\n"
      ]
     }
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +260,7 @@
        "9                  AFG   37172386.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +298,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +663,7 @@
        "[10 rows x 197 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +971,7 @@
        "[8 rows x 197 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,20 +989,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724e32710>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeb7550f0>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc35cc1c750>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1033,20 +1028,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1725c8e910>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eec7d3cc0>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c8d4ad0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1078,20 +1069,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1728044310>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeb96b518>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32f851850>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1121,28 +1108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/zwieteri/.local/lib/python3.6/site-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log10\n",
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log10\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724c815d0>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeb8fdd68>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c7d0fd0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1174,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -1183,21 +1166,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/zwieteri/.local/lib/python3.6/site-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log10\n",
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log10\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724c11e10>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeb94f940>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c6f0490>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1234,20 +1213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17223f5990>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eecaf03c8>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c89c610>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1277,20 +1252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17222e38d0>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eec8e20b8>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c560950>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1320,27 +1291,16 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-=======
-   "execution_count": 36,
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1724f3d690>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c470450>"
       ]
      },
-     "execution_count": 19,
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeca33470>"
-      ]
-     },
-     "execution_count": 36,
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1370,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -1378,14 +1338,10 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17221438d0>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eebb0fcf8>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32cabc490>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1415,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -1423,14 +1379,10 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f17220ef390>"
-=======
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3eeb8aec50>"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc32c93f610>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1478,8 +1430,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-<<<<<<< HEAD
-=======
   },
   "language_info": {
    "codemirror_mode": {
@@ -1491,8 +1441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
->>>>>>> 6185f89dbbde69b1c2bf42de612da293244ef22e
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
