--- a/Modelpivot.ipynb
+++ b/Modelpivot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-01 12:42:03--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.83, 13.227.223.89, 13.227.223.117, ...\n",
-      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.83|:443... connected.\n",
+      "--2020-05-01 14:00:01--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.89, 13.227.223.78, 13.227.223.117, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.89|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 671154 (655K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
       "Saving to: ‘COVID-19-geographic-disbtribution-worldwide.xlsx’\n",
       "\n",
       "COVID-19-geographic 100%[===================>] 655.42K  --.-KB/s    in 0.05s   \n",
       "\n",
-      "2020-05-01 12:42:04 (12.5 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [671154/671154]\n",
+      "2020-05-01 14:00:01 (12.5 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [671154/671154]\n",
       "\n"
      ]
     }
@@ -1169,7 +1169,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fefd4887fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49aaef5f50>"
       ]
      },
      "execution_count": 9,
@@ -1294,8 +1294,10 @@
    ],
    "source": [
     "country = 'NL'\n",
+    "measure = 'cases'\n",
+    "pmeasure = 'pcases'\n",
     "\n",
-    "df_pred = pd.DataFrame({'x':df_geo['daynum'], 'y':df_geo['cases'][country].rolling(7, win_type='triang').mean()})\n",
+    "df_pred = pd.DataFrame({'x':df_geo['daynum'], 'y':df_geo[measure][country].rolling(7, win_type='triang').mean()})\n",
     "df_pred = df_pred[df_pred['y'] > 100]\n",
     "df_pred['y'] = np.log10(df_pred['y'])\n",
     "df_pred.describe()"
@@ -1341,7 +1343,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fefe80209d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49a8a99750>"
       ]
      },
      "execution_count": 12,
@@ -1362,8 +1364,8 @@
     }
    ],
    "source": [
-    "df_geo[('pcases', country)] = 10 ** np.polyval(fit, df_geo['daynum'])\n",
-    "df_geo.plot(y=[('cases', country), ('pcases', country)], figsize=(16, 9), grid=True)"
+    "df_geo[(pmeasure, country)] = 10 ** np.polyval(fit, df_geo['daynum'])\n",
+    "df_geo.plot(y=[(measure, country), (pmeasure, country)], figsize=(16, 9), grid=True)"
    ]
   },
   {
@@ -1381,7 +1383,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fefe7a86e90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49be54c5d0>"
       ]
      },
      "execution_count": 13,
@@ -1402,7 +1404,7 @@
     }
    ],
    "source": [
-    "df_geo[[('cases', country), ('pcases', country)]].cumsum().plot(figsize=(16, 9), grid=True)"
+    "df_geo[[(measure, country), (pmeasure, country)]].cumsum().plot(figsize=(16, 9), grid=True)"
    ]
   },
   {
@@ -1423,7 +1425,7 @@
     }
    ],
    "source": [
-    "df_geo['pcases'][country].cumsum().tail(1)"
+    "df_geo[pmeasure][country].cumsum().tail(1)"
    ]
   },
   {
