--- a/Modelpivot.ipynb
+++ b/Modelpivot.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-01 14:00:01--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.89, 13.227.223.78, 13.227.223.117, ...\n",
-      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.89|:443... connected.\n",
+      "--2020-05-01 16:46:17--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.117, 13.227.223.78, 13.227.223.83, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.117|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 671154 (655K) [application/vnd.openxmlformats-officedocument.spreadsheetml.sheet]\n",
       "Saving to: ‘COVID-19-geographic-disbtribution-worldwide.xlsx’\n",
       "\n",
-      "COVID-19-geographic 100%[===================>] 655.42K  --.-KB/s    in 0.05s   \n",
+      "COVID-19-geographic 100%[===================>] 655.42K  --.-KB/s    in 0.08s   \n",
       "\n",
-      "2020-05-01 14:00:01 (12.5 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [671154/671154]\n",
+      "2020-05-01 16:46:18 (8.40 MB/s) - ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ saved [671154/671154]\n",
       "\n"
      ]
     }
@@ -1169,7 +1169,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49aaef5f50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7f4ae21d0>"
       ]
      },
      "execution_count": 9,
@@ -1343,7 +1343,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49a8a99750>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7f26682d0>"
       ]
      },
      "execution_count": 12,
@@ -1365,7 +1365,7 @@
    ],
    "source": [
     "df_geo[(pmeasure, country)] = 10 ** np.polyval(fit, df_geo['daynum'])\n",
-    "df_geo.plot(y=[(measure, country), (pmeasure, country)], figsize=(16, 9), grid=True)"
+    "df_geo[[(measure, country), (pmeasure, country)]].plot(figsize=(16, 9), grid=True)"
    ]
   },
   {
@@ -1383,7 +1383,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f49be54c5d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb8080656d0>"
       ]
      },
      "execution_count": 13,
