--- a/Gumbelmulti.ipynb
+++ b/Gumbelmulti.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-13 14:13:55--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.117, 13.227.223.89, 13.227.223.83, ...\n",
-      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.117|:443... connected.\n",
+      "--2020-05-13 14:28:54--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.83, 13.227.223.89, 13.227.223.117, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.83|:443... connected.\n",
       "HTTP request sent, awaiting response... 304 Not Modified\n",
       "File ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ not modified on server. Omitting download.\n",
       "\n"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -120,7 +120,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -134,7 +134,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -148,7 +148,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -162,7 +162,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -176,7 +176,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,7 +190,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -204,7 +204,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -218,7 +218,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -232,7 +232,7 @@
        "      <td>Afghanistan</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>37172386</td>\n",
+       "      <td>37172386.0</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -252,26 +252,26 @@
        "8 2020-05-05    5      5  2020    190       5             Afghanistan    AF   \n",
        "9 2020-05-04    4      5  2020    235      13             Afghanistan    AF   \n",
        "\n",
-       "  countryterritoryCode popData2018 continentExp  \n",
-       "0                  AFG    37172386         Asia  \n",
-       "1                  AFG    37172386         Asia  \n",
-       "2                  AFG    37172386         Asia  \n",
-       "3                  AFG    37172386         Asia  \n",
-       "4                  AFG    37172386         Asia  \n",
-       "5                  AFG    37172386         Asia  \n",
-       "6                  AFG    37172386         Asia  \n",
-       "7                  AFG    37172386         Asia  \n",
-       "8                  AFG    37172386         Asia  \n",
-       "9                  AFG    37172386         Asia  "
+       "  countryterritoryCode  popData2018 continentExp  \n",
+       "0                  AFG   37172386.0         Asia  \n",
+       "1                  AFG   37172386.0         Asia  \n",
+       "2                  AFG   37172386.0         Asia  \n",
+       "3                  AFG   37172386.0         Asia  \n",
+       "4                  AFG   37172386.0         Asia  \n",
+       "5                  AFG   37172386.0         Asia  \n",
+       "6                  AFG   37172386.0         Asia  \n",
+       "7                  AFG   37172386.0         Asia  \n",
+       "8                  AFG   37172386.0         Asia  \n",
+       "9                  AFG   37172386.0         Asia  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_excel('COVID-19-geographic-disbtribution-worldwide.xlsx', na_filter=False)\n",
+    "df = pd.read_excel('COVID-19-geographic-disbtribution-worldwide.xlsx', keep_default_na=False, na_values='')\n",
     "df.head(10)"
    ]
   },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -315,15 +315,15 @@
        "deaths                     16741\n",
        "countriesAndTerritories    16741\n",
        "geoId                      16741\n",
-       "countryterritoryCode       16741\n",
-       "popData2018                16741\n",
+       "countryterritoryCode       16593\n",
+       "popData2018                16540\n",
        "continentExp               16741\n",
        "pcases                         0\n",
        "pdeaths                        0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "[135 rows x 836 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "[318 rows x 836 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
        "Name: daynum, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -1553,17 +1553,18 @@
     "    df_pred = pd.DataFrame({'x':df_geo['daynum'], 'y':df_geo[measure][country]})\n",
     "    maxy = df_pred['y'].cumsum().max()\n",
     "    df_pred = df_pred[df_pred['y'] > mincases]\n",
-    "    df_pred['y'] = df_pred['y'].cumsum() / maxy * res.x[0]\n",
-    "    df_pred = df_pred[df_pred['y'] > 0]\n",
-    "    df_pred['y'] = - np.log(df_pred['y'])\n",
-    "    df_pred = df_pred[df_pred['y'] > 0]\n",
-    "    df_pred['y'] = np.log(df_pred['y'])\n",
-    "    fit = np.polyfit(x=df_pred['x'], y=df_pred['y'], deg=1, full=True)\n",
-    "    df_geo[(pmeasure, country)] = np.exp(- np.exp(np.polyval(fit[0], df_geo['daynum']))) * maxy / res.x[0]\n",
-    "    df_geo[(pmeasure, country)] = df_geo[(pmeasure, country)] - df_geo[(pmeasure, country)].shift()\n",
-    "    print(country, \"Residuals %1.3f at %3d percent to %7d\" %(res.fun, res.x[0] * 100, df_geo[pmeasure][country].cumsum().max()), measure)\n",
-    "    df_geo[[(measure, country), (pmeasure, country)]].plot(figsize=(16, 9), grid=True)\n",
-    "    df_geo[[(measure, country), (pmeasure, country)]].cumsum().plot(figsize=(16, 9), grid=True)"
+    "    if len(df_pred) > 0:\n",
+    "        df_pred['y'] = df_pred['y'].cumsum() / maxy * res.x[0]\n",
+    "        df_pred = df_pred[df_pred['y'] > 0]\n",
+    "        df_pred['y'] = - np.log(df_pred['y'])\n",
+    "        df_pred = df_pred[df_pred['y'] > 0]\n",
+    "        df_pred['y'] = np.log(df_pred['y'])\n",
+    "        fit = np.polyfit(x=df_pred['x'], y=df_pred['y'], deg=1, full=True)\n",
+    "        df_geo[(pmeasure, country)] = np.exp(- np.exp(np.polyval(fit[0], df_geo['daynum']))) * maxy / res.x[0]\n",
+    "        df_geo[(pmeasure, country)] = df_geo[(pmeasure, country)] - df_geo[(pmeasure, country)].shift()\n",
+    "        print(country, \"Residuals %1.3f at %3d percent to %7d\" %(res.fun, res.x[0] * 100, df_geo[pmeasure][country].cumsum().max()), measure)\n",
+    "        df_geo[[(measure, country), (pmeasure, country)]].plot(figsize=(16, 9), grid=True)\n",
+    "        df_geo[[(measure, country), (pmeasure, country)]].cumsum().plot(figsize=(16, 9), grid=True)"
    ]
   },
   {
