--- a/Modelpivot.ipynb
+++ b/Modelpivot.ipynb
@@ -9,16 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-13 13:44:51--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... failed: Name or service not known.\n",
-      "wget: unable to resolve host address ‘www.ecdc.europa.eu’\n"
+      "--2020-05-14 09:04:28--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.89, 13.227.223.78, 13.227.223.117, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.89|:443... connected.\n",
+      "HTTP request sent, awaiting response... 304 Not Modified\n",
+      "File ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ not modified on server. Omitting download.\n",
+      "\n"
      ]
     }
    ],
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +266,7 @@
        "9                  AFG    37172386         Asia  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +324,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +727,7 @@
        "[135 rows x 836 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1101,7 @@
        "[226 rows x 836 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1138,7 @@
        "Name: daynum, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,16 +1158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f181c56d040>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2ba95b80>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1194,16 +1197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1826ce6160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b27fdf0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1240,16 +1243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f18273a13d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b216f70>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1280,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1293,10 +1296,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f182756e460>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b150c10>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1330,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1343,10 +1346,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1827496160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b097c10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1380,16 +1383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1826ee3cd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b5262e0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1420,16 +1423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f18274f4970>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4d2b69e430>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1452,17 +1455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2020-08-12    43024.884872\n",
-       "Freq: D, Name: NL, dtype: float64"
+       "2020-08-12    43024\n",
+       "Freq: D, Name: NL, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
