--- a/Gumbelpivot.ipynb
+++ b/Gumbelpivot.ipynb
@@ -16,9 +16,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-31 12:54:14--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
-      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 13.227.223.78, 13.227.223.89, 13.227.223.83, ...\n",
-      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|13.227.223.78|:443... connected.\n",
+      "--2020-06-01 11:16:03--  https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide.xlsx\n",
+      "Resolving www.ecdc.europa.eu (www.ecdc.europa.eu)... 2600:9000:21c7:d800:1d:d83a:40c0:93a1, 2600:9000:21c7:ac00:1d:d83a:40c0:93a1, 2600:9000:21c7:8a00:1d:d83a:40c0:93a1, ...\n",
+      "Connecting to www.ecdc.europa.eu (www.ecdc.europa.eu)|2600:9000:21c7:d800:1d:d83a:40c0:93a1|:443... connected.\n",
       "HTTP request sent, awaiting response... 304 Not Modified\n",
       "File ‘COVID-19-geographic-disbtribution-worldwide.xlsx’ not modified on server. Omitting download.\n",
       "\n"
@@ -1140,16 +1140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2511b0b7f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26e6d634f0>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1237,16 +1237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2511b90550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26e64a4130>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1394,16 +1394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f25119b91c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26e5ecaa90>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1446,10 +1446,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f251192f820>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26e62ce100>"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1508,16 +1508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2511f0dfd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26e5cf3a60>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1549,16 +1549,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f251174b460>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26da639100>"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
        "DatetimeIndex(['2020-04-08'], dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1769,16 +1769,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2511fa2610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f26da8d3700>"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
